<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
              android:paddingStart="10dp"
              android:paddingEnd="0dp">

    <TextView
        android:id="@+id/textView_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/titleColor"
        android:textSize="17sp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView_detail_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/captionColor"
        android:textSize="15sp"
        android:text="@string/unit" />

    <TextView
        android:id="@+id/textView_detail_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/captionColor"
        android:textSize="15sp"
        android:text="@string/quantity" />
</LinearLayout>