<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:orientation="vertical"
    android:useDefaultMargins="true">

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/addEvent_title"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleContainer"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/inputNameContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_addDetail_unit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:labelFor="@+id/editText_addEvent_name"
                android:text="@string/addEvent_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_addEvent_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputDateContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_addEvent_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:labelFor="@+id/editText_addEvent_date"
                android:text="@string/addEvent_date"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_addEvent_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:onClick="onDateEditClick" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputTimeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_addEvent_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:labelFor="@+id/editText_addEvent_time"
                android:text="@string/addEvent_time"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_addEvent_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="time"
                android:onClick="onTimeEditClick" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputContainer"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/button_addEvent_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryLightColor"
            android:onClick="onAddClick"
            android:text="@string/addEvent_add"
            android:textColor="@color/primaryTextColor" />

        <Button
            android:id="@+id/button_addEvent_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/secondaryLightColor"
            android:onClick="onCancelClick"
            android:text="@string/addEvent_cancel"
            android:textColor="@color/primaryTextColor" />
    </LinearLayout>


</RelativeLayout>